resetPassword API 추가
- OpenAPI 스펙 변경
